--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,12 @@
 
     <string-array name="encodings" >
         <item>.wav (default)</item>
-        <item>.aac</item>
+        <item>.m4a</item>
     </string-array>
 
     <string-array name="encodings_values" >
         <item>wav</item>
-        <item>aac</item>
+        <item>m4a</item>
     </string-array>
 
     <string name="title_activity_main">Audio Recorder</string>
