--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -43,14 +43,14 @@
     <string name="recording_title">Запись</string>
     <string name="db">дБ</string>
     <string name="days_symbol">д</string>
-    <string name="title_header">%1$s свободно ~ %2$s осталось</string>
+    <string name="title_header">%1$s свободно ~ %2$s</string>
     <string name="size_gb">%1$.1f ГБ</string>
     <string name="size_mb">%1$.1f МБ</string>
     <string name="size_kb">%1$.1f кб</string>
     <string name="rename">Переименовать</string>
     <string name="delete">Удалить</string>
     <string name="open_recording_folder">Открыть папку с записями</string>
-    <string name="recording_list_is_empty">Список записей пуст\n\nНажмите на "Микрофон" чтобы начать запись</string>
+    <string name="recording_list_is_empty">Список записей пуст.\n\nНажмите на \'Микрофон\' чтобы начать запись.</string>
 
     <plurals name="days">
         <item quantity="one">%d день</item>
