--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,6 +21,11 @@
         <item>.m4a</item>
     </string-array>
 
+    <string-array name="channels_text">
+        <item>Моно (по умолчанию)</item>
+        <item>Стерео</item>
+    </string-array>
+
     <string name="title_activity_main">Аудио Рекордер</string>
     <string name="action_settings">Настройки</string>
     <string name="not_permitted">Доступ запрещен</string>
