--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,13 @@
     <string-array name="encodings_text">
         <item>.wav (default)</item>
         <item>.m4a</item>
+        <item>.mka</item>
     </string-array>
 
     <string-array name="encodings_values" translatable="false">
         <item>wav</item>
         <item>m4a</item>
+        <item>mka</item>
     </string-array>
 
     <string-array name="themes_text">
