--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     </string-array>
 
     <string name="action_settings">Settings</string>
-    <string name="call_recording">Call Recording</string>
+    <string name="call_recording">Calls Recording</string>
     <string name="not_permitted">Not permitted</string>
     <string name="no_folder_app">No folder view application installed</string>
     <string name="hold_by_call">pause (hold by call)</string>
@@ -86,5 +86,5 @@
     <string name="recording_title">Recording</string>
     <string name="title_header">%1$s free ~ %2$s left</string>
     <string name="open_recording_folder">Open Recording Folder</string>
-    <string name="recording_list_is_empty">Recording List is Empty\n\nCheck \'Enable Recording\' to Start Calls Recording</string>
+    <string name="recording_list_is_empty">Recording List is Empty\n\nCheck \'Calls Recording\' to Start Calls Recording</string>
 </resources>
