--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,10 @@
         <item>2017-02-01 09.08.01 +1(123)123-12-12.wav</item>
         <item>1487926249.wav</item>
         <item>1487926249 +1(123)123-12-12.wav</item>
-        <item>20171224T221123.wav</item>
-        <item>20171224T221123 +1(123)123-12-12.wav</item>
+        <item>20170201T090801.wav</item>
+        <item>20170201T090801 +1(123)123-12-12.wav</item>
+        <item>2017-02-01 09.08.01 Contact Name.wav</item>
+        <item>20170201T090801 Contact Name.wav</item>
     </string-array>
 
     <string-array name="format_values" formatted="false" translatable="false">
@@ -53,6 +55,8 @@
         <item>%T %p</item>
         <item>%I</item>
         <item>%I %p</item>
+        <item>%s %c</item>
+        <item>%I %c</item>
     </string-array>
 
     <string-array name="themes_text">
