--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,24 +51,20 @@
 
     <string-array name="format_text" translatable="false">
         <item>2017-02-01 09.08.01.wav</item>
-        <item>2017-02-01 09.08.01 +1(123)123-12-12.wav</item>
-        <item>1487926249.wav</item>
-        <item>1487926249 +1(123)123-12-12.wav</item>
         <item>20170201T090801.wav</item>
-        <item>20170201T090801 +1(123)123-12-12.wav</item>
         <item>2017-02-01 09.08.01 Contact Name.wav</item>
         <item>20170201T090801 Contact Name.wav</item>
+        <item>2017-02-01 09.08.01 ↓↑ Contact Name.wav</item>
+        <item>20170201T090801 ↓↑ Contact Name.wav</item>
     </string-array>
 
     <string-array name="format_values" formatted="false" translatable="false">
         <item>%s</item>
-        <item>%s %p</item>
-        <item>%T</item>
-        <item>%T %p</item>
         <item>%I</item>
-        <item>%I %p</item>
         <item>%s %c</item>
         <item>%I %c</item>
+        <item>%s %i %c</item>
+        <item>%I %i %c</item>
     </string-array>
 
     <string-array name="themes_text">
