--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -71,4 +71,5 @@
     <string name="task_managers_text">お使いの電話にバッテリー最適化があるか、タスクマネージャーがそれらを無効にしていると考えられる場合、アプリケーションはバックグラウンドで実行を続けます。</string>
     <string name="recording_enabled">録音が有効です</string>
     <string name="recording_disabled">録音が無効です</string>
+    <string name="callrecent_auto_save">Auto save in (%1$d)</string>
 </resources>
