--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -90,4 +90,8 @@
     <string name="pref_optimization_summary">Предотвращать удаление программы из памяти телефона</string>
     <string name="pref_theme_title">Тема приложения</string>
     <string name="pref_theme_summary">Установить тему приложения (темная / светлая)</string>
+    <string name="mixer_paths_done">Patched mixer_paths.xml, please reboot!</string>
+    <string name="mixer_paths_failed">Unable to patch mixer_paths.xml</string>
+    <string name="pref_mixerpaths_title">Path mixer_paths.xml</string>
+    <string name="pref_mixerpaths_summary">Path system mixer_paths.xml to enable booth side recordings, requires ROOT</string>
 </resources>
