--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,6 +136,6 @@
     <string name="pref_optimization_summary">Prevent app to be removed from memory</string>
     <string name="pref_theme_title">Application Theme</string>
     <string name="pref_theme_summary">Set application theme (dark / light)</string>
-    <string name="pref_mixerpaths_title">Path mixer_paths.xml</string>
-    <string name="pref_mixerpaths_summary">Path system mixer_paths.xml to enable booth side recordings, requires ROOT</string>
+    <string name="pref_mixerpaths_title">Patch mixer_paths.xml</string>
+    <string name="pref_mixerpaths_summary">Patch system mixer_paths.xml to enable booth side recordings, requires ROOT</string>
 </resources>
