--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -94,4 +94,7 @@
     <string name="pref_theme_summary">アプリケーションのテーマを設定します (ダーク / ライト)</string>
     <string name="pref_mixerpaths_title">Patch mixer_paths.xml</string>
     <string name="pref_mixerpaths_summary">Patch system mixer_paths.xml to enable booth side recordings, requires ROOT</string>
+    <string name="pref_recordings">Recordings</string>
+    <string name="pref_advanced">Advanced</string>
+    <string name="pref_application">Application</string>
 </resources>
