--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,4 +138,7 @@
     <string name="pref_theme_summary">Set application theme (dark / light)</string>
     <string name="pref_mixerpaths_title">Patch mixer_paths.xml</string>
     <string name="pref_mixerpaths_summary">Patch system mixer_paths.xml to enable booth side recordings, requires ROOT (optional)</string>
+    <string name="pref_recordings">Recordings</string>
+    <string name="pref_advanced">Advanced</string>
+    <string name="pref_application">Application</string>
 </resources>
