--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,7 +137,7 @@
     <string name="pref_theme_title">Application Theme</string>
     <string name="pref_theme_summary">Set application theme (dark / light)</string>
     <string name="pref_mixerpaths_title">System Mixer</string>
-    <string name="pref_mixerpaths_summary">Allow system mixer to record calls for apps</string>
+    <string name="pref_mixerpaths_summary">Allow system mixer to record calls for regular apps</string>
     <string name="pref_recordings">Recordings</string>
     <string name="pref_advanced">Advanced</string>
     <string name="pref_application">Application</string>
